log in and log out are now working (i think)

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,9 +28,10 @@
       {{{body}}}
     </div>
   </main>
-  {{#if loggedIn}}
+  {{!-- {{#if loggedIn}} --}}
   <script src="/js/logout.js"></script>
-  {{/if}}
+  {{!-- {{/if}} --}}
 </body>
 
 </html>
+{{!-- <script src="../../public/js/login.js"></script> --}}
