--- a/views/contentDetails.handlebars
+++ b/views/contentDetails.handlebars
@@ -5,12 +5,12 @@
     <p>{{content.text}}</p>
     <p>Posted on {{format_date content.createdAt}}</p>
     <div>
-      {{!-- TODO WIRE THE LEAVE A COMMENT --}}
       <h3>Leave a comment</h3>
-      <form action="/comment" method="POST">
-      <textarea class="comment" placeholder="type your comment here."></textarea>
+    <form action="/comment" method="POST" id="{{content.id}}" class="comment-form">
+      <textarea id="content-id" hidden>{{content.id}}</textarea>
+      <textarea class="comment"  id="comment-text" placeholder="type your comment here."></textarea>
       <br>
-      <input type="submit" name="submit" value="Send">
+      <button id="send-comment">Send</button>
     </form>
     </div>
     <div>
@@ -26,3 +26,4 @@
   </div>
   
 </section>
+<script src="/js/comment.js"></script>
