added the ability for users to edit

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -5,6 +5,7 @@
     <input name="title-ed"type="text" id="edit-title" value="{{content.title}}"> <br>
     <label for="text-ed"><b>Edit Text:</b></label> <br>
     <textarea cols="30" rows="10" id="edit-text">{{content.text}}</textarea> <br>
+    <textarea id="edit-id" hidden>{{content.id}}</textarea> <br>
     <input type="submit" value="Save Changes">
   </form> <br> <br>
   <form class="delete-form">
