--- a/views/partials/contentPreveiw.handlebars
+++ b/views/partials/contentPreveiw.handlebars
@@ -1,4 +1,4 @@
 <section class="card">
-  <a href="/content/{{id}}"><header>{{title}}</header></a>
-    <p>by {{user.username}}, on {{format_date createdAt}}</p>
+  <a class="text-capitalize" href="/content/{{id}}"><b><header>{{title}}</header></b></a>
+  <p class="text-muted">by {{user.username}}, on {{format_date createdAt}}</p>
 </section>
