--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,18 +1,17 @@
-<h2>Dashboard</h2>
+<h2 class="ml-2">Dashboard</h2>
 
-<form class="post-form">
+<form class="post-form ml-5 mr-5 mb-4">
     <label for="title"><b>Title</b></label> <br>
-    <input type="text" id="post-title" name="title" placeholder="Title"> <br>
+    <input class="form-control" type="text" id="post-title" name="title" placeholder="Title"> <br>
     <label for="new_post"><b>New Post</b></label> <br>
-    <textarea name="new_post" id="newpost" cols="30" rows="10" placeholder="Type your thoughts here!"></textarea> <br>
-    <button id="postART">Post</button>
+    <textarea class="form-control" name="new_post" id="newpost" cols="30" rows="10" placeholder="Type your thoughts here!"></textarea> <br>
+    <button class="btn btn-success px-5" id="postART">Post</button>
 </form>
-
-<section >
-  <h4>Previous Posts:</h4>
+<h4 class="ml-2">Previous Posts:</h4>
+<section class="d-flex flex-column mb-3">
   {{#each info.contents}}
-    <div class="card" id="post-id-{{this.id}}">
-    <h1>{{this.title}}</h1>
+    <div class="card ml-5 mt-2 mb-2" id="post-id-{{this.id}}">
+    <h3 class="text-capitalize">{{this.title}}</h3>
     <p>{{this.text}}</p>
     <p>{{format_date this.createdAt}}</p>
     {{!-- <form id="delete-{{this.id}}" name="delete-form">
