--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,31 +5,46 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Spot</title>
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+  
 </head>
 
-<body>
-  <header>
-    <h1>Blog Spot</h1>
-  </header>
-  <nav>
-
-    <a href="/">Home</a>
-    <a href="/dashboard">dashboard</a>
-    {{#if loggedIn}}
-    <button id="logout" class="btn-no-style">Logout</button>
-    {{else}}
-    <a href="/login">Login</a>
-    {{/if}}
-
+<body class="bg-light">
+  <nav class="navbar navbar-light bg-secondary navbar-expand">
+    <div class="container-fluid">
+    
+    <a class="navbar-brand" href="/">
+      <span class="fw-bold text-light">
+         <b>Blog Spot</b>
+      </span>
+    </a> 
+  <div class="">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link text-light" href="/dashboard">Dashboard</a>
+    </li>
+    <li class="nav-item">
+      {{#if loggedIn}}
+       <button id="logout" class="btn btn-secondary">Logout</button>
+      {{else}}
+       <a class="nav-link text-light" href="/login">Login</a>
+      {{/if}}
+    </li>
+  </ul>
+  </div>
+    
+    
+    </div>
   </nav> <br>
   <main>
     <div class="content">
       {{{body}}}
     </div>
   </main>
- 
+  {{#if loggedIn}}
   <script src="/js/logout.js"></script>
+   {{/if}}
   
 </body>
 
