--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,30 +1,30 @@
-<div class="row justify-space-between-md">
-  <div class="login-card">
+<div class="position-relative">
+  <div class="login-card ml-5 mr-5">
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="username-login">username:</label>
-        <input class="form-input" type="text" id="username-login" />
+        <label class="form-label" for="username-login">Username:</label>
+        <input class="form-input form-control" type="text" id="username-login" />
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="form-input form-control" type="password" id="password-login" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
   </div>
-  <div class="login-card">
+  <div class="login-card ml-5 mr-5">
     <h2 class="page-title">Signup</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
+        <input class="form-input form-control" type="text" id="username-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input form-control" type="password" id="password-signup" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
